# router/index.js
@@ -25,6 +25,7 @@ router.post("/login", userController.login);
 router.post("/logout", userController.logout);
 router.get("/refresh", userController.refresh);
 router.get("/users", authMiddleware, userController.getUsers);
+router.get("/users/:id", authMiddleware, userController.getSingleUser);
 
 router.post(
   "/posts",
